--- a/styles/index.css
+++ b/styles/index.css
@@ -126,3 +126,10 @@ main {
     background: rgb(3, 3, 3);
     height: 100%;
 }
+
+
+@media only screen and (max-width: 650px) {
+    main {
+        width: 95%;
+    }
+}
