--- a/dashboard.css
+++ b/dashboard.css
@@ -2,13 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+html {
+    background-color: black;
 }
 
 .navbar {
     width: 100%;
     height: 70px;
     display: flex;
+    margin-bottom: 20px;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
@@ -19,7 +24,6 @@
 .navbar-logo > h1 {
     color: white;
     margin-left: 20px;
-    font-weight: 800;
 }
 
 .navbar-logo > h1 > span {
@@ -67,66 +71,29 @@
     transform-origin: bottom left;
 }
 
-.api-docs {
+.dashboard {
     width: 100%;
-    background-color: black;
+    height: 100vh;
+    padding-top: 60px;
+}
+
+.news-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-}
-
-
-
-.api-route-card {
-    padding: 10px;
     width: 90%;
-    height: fit-content;
-    border-radius: 3px;
-    border: green solid 1px;
+    margin: auto;
+    height: 100%;
 }
 
-h4 {
-    font-size: 1.2em;
-    font-weight: 400;
-}
-
-.route-status, .route-response, .api-route, .api-method {
-    background-color: rgb(0, 82, 0);
-    padding: 5px;
-    box-sizing: 0 0 30px black;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 4px; 
-}
-
-.api-route-upper {
+.coming-soon {
+    width: 300px;
     display: flex;
-    background-color: rgba(60, 255, 0, 0.226);
-    border: rgba(0, 146, 0, 0.418) solid 1px;
-    border-radius: 5px;
-    color: rgb(245, 245, 245);
-    padding: 20px;
-    margin-bottom: 10px;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
 
-.api-route-bottom {
-    padding: 20px;
-    background-color: rgba(60, 255, 0, 0.226);
-    border: rgba(0, 146, 0, 0.418) solid 1px;
-    border-radius: 5px;
-    color: rgb(245, 245, 245);
-    display: flex;
-    justify-content: space-between;
+.coming-soon > h1 {
+    color: white;
+    font-size: 2em;
 }
-
-@media only screen and (max-width: 950px) {
-    .api-route-card {
-        width: 98%;
-    }
-    .api-route-upper, .api-route-bottom {
-        padding: 5px !important;
-    }
-}
-
