--- a/dashboard.css
+++ b/dashboard.css
@@ -21,6 +21,12 @@ html {
     z-index: 2;
 }
 
+.navbar-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .navbar-logo > h1 {
     color: white;
     margin-left: 20px;
@@ -36,7 +42,7 @@ html {
 }
 
 .navbar-links {
-    width: 240px;
+    width: 200px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -74,16 +80,54 @@ html {
 .dashboard {
     width: 100%;
     height: 100vh;
-    padding-top: 60px;
+    padding-top: 100px;
 }
 
 .news-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 90%;
+    width: 55%;
     margin: auto;
     height: 100%;
+}
+
+.news-article {
+    padding: 5px;
+    border-radius: 4px;
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 10px;    
+}
+
+.news-title {
+    color: white;
+    height: 80%;
+    margin-bottom: 5%;
+}
+
+.news-article-info {
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.news-article-prediction-container {
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.news-article-source-date {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+}
+
+.news-article-source-date > h5 {
+    color: rgb(236, 236, 236);
+    margin-right: 20px;
+    font-weight: 400;
 }
 
 .coming-soon {
@@ -97,3 +141,42 @@ html {
     color: white;
     font-size: 2em;
 }
+
+.green {
+    background-color: rgba(0, 58, 0, 0.703);
+    border: green solid 1px;
+}
+
+.red {
+    background-color: rgba(156, 0, 0, 0.655);
+    border: red solid 1px;
+}
+
+@media only screen and (max-width: 950px) {
+    .news-container {
+        display: flex;
+        justify-content: center;
+        width: 90%;
+        margin: auto;
+        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .news-container {
+        display: flex;
+        justify-content: center;
+        width: 90%;
+        margin: auto;
+        height: 100%;
+    }
+
+    .news-title {
+        font-size: 1.2em;
+        color: white;
+        height: 80%;
+        margin-bottom: 5%;
+    }
+}
+
+
