--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@
     z-index: 2;
 }
 
+.navbar-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .navbar-logo > h1 {
     color: white;
     margin-left: 20px;
@@ -32,7 +38,7 @@
 }
 
 .navbar-links {
-    width: 240px;
+    width: 200px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -129,7 +135,7 @@ main {
 }
 
 #particles-js {
-    background: rgb(0, 0, 0);
+    background: black;
     height: 100%;
 }
 
